@@ -9,6 +9,25 @@ use Siel\Acumulus\OpenCart\Helpers\OcHelper as BaseOcHelper;
 class OcHelper extends BaseOcHelper
 {
     /**
+     * Returns the intermediate breadcrumb for the config screen.
+     *
+     * The config screen is normally accessed via the extensions part of
+     * OpenCart. Therefore an intermediate level is added to the breadcrumb,
+     * consisting of the extensions page.
+     *
+     * @return array
+     *   The intermediate breadcrumb for the config screen.
+     */
+    protected function getExtensionsBreadcrumb()
+    {
+        return array(
+            'text' => $this->t('extensions'),
+            'href' => Registry::getInstance()->getLink('extension/extension'),
+            'separator' => ' :: '
+        );
+    }
+
+    /**
      * {@inheritdoc}
      */
     protected function getRedirectUrl()
